# p6

./: .gitignore  AGENTS.md  Cargo.toml  FLOWCHARTS.md  README.md  _002.KXML  _003.KXML  _005.KXML  data_2.csv  data_3.csv  data_4.csv  data_cov.py  local_finetuned_best.pth  pyproject.toml
data/: _000.KXML  _001.KXML  _004.KXML  data_3.csv  data_5.csv
python/p6/: README_python.md  __init__.py  benchmark_usb.py  benchmark_usb2.py  collector.py  extractor.py  fake_collector.py  fast_predictor.py  lstm_regressor.pth  lstm_scaler.joblib  main.py  p6_api.py  predictor.py  socket_faker.py  train_lstm.py  train_ml.py  train_reg_slide.py  train_regression.py  utils.py
python/p6/downsample_and_train/: downsample.py  train.py
scripts/: find_misclassified.py  task_and_acustics_data_collection.py
src/: Communication Protocols For The Old Screwing Cell.docx  ConverterKxmlToJson.py  ErrorLog  README.md  collector.py  common.rs  data_test.csv  expanding.rs  fake_collector.py  folderManager.py  information.txt  kxml_csv.py  lib.rs  lttb.py  main.py  mucksev.py  predictor.py  rf.rs  run.bat  serial_monitor.py  servertest.py  task_and_acustics_data_collection.py  test.py  train_ml.py  train_regression.py  types.rs
src/sliding/: engine.rs
webdash/: .gitignore  AGENTS.md  biome.json  package.json  rsbuild.config.ts  rstest.config.ts  tsconfig.json
webdash/src/: App.css  App.scss  App.tsx  socket.ts
webdash/src/comp/: Card.tsx  ColectorCard.tsx  ExpandToggleButton.tsx  KXMLCore.tsx  KXMLFetch.tsx  KXMLPlotter.tsx  KXMLSocket.tsx  ModelSelector.tsx  Plot.tsx  PredictionPlotter.tsx  PredictorCard.tsx  RobotMonitor.tsx  RobotPlotter.tsx  ScrewCard.tsx  ScrewCore.tsx  ScrewFetch.tsx  ScrewSocket.tsx  Select.tsx  ToggleSwitch.tsx
webdash/tests/: index.test.tsx
