[package]
name = "p6"
version = "0.1.0"
edition = "2024"

[lib]
name = "_p6"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module","abi3-py311","generate-import-lib"] }
numpy = "0.23"
# For math operations
ndarray = { version = "0.16", features = ["rayon"] }
arrow = { version = "54", features = ["pyarrow"] }
smallvec = "1.10"
num-traits = "0.2"
rayon = "1.10"
realfft = "3.5"
num-complex = "0.4"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"
