[project]
name = "p6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.1",
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "pymodbustcp>=0.3.0",
    "pyserial>=3.5",
    "python-snap7>=2.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
