[project]
name = "p6"
version = "0.1.0"
description = "Screw Quality Monitoring System - Bachelor Project at AAU"
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.1",
    "joblib>=1.5.3",
    "numpy>=2.0.0",
    "pandas>=2.3.0",
    "pymodbustcp>=0.3.0",
    "pyserial>=3.5",
    "python-snap7>=2.1.0",
    "scikit-learn>=1.7.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "maturin>=1.5,<2.0",
    "pyarrow",
    "matplotlib>=3.10.8",
    "watchdog>=6.0.0",
    "sktime>=0.40.0",
    "pyscrew>=1.2.2",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "p6._p6"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]

[project.scripts]
p6 = "p6.main:main"
p6-fake = "p6.main:fake_main"
p6-train-lstm = "p6.train_lstm:main"
p6-train-ml = "p6.train_ml:main"
p6-train-regression = "p6.train_regression:main"
p6-socket-faker = "p6.socket_faker:main"

